--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "build-prod": "./node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "build-prod-withMap": "./node_modules/.bin/webpack --mode production --config webpack.prod.js --sourceMap",
     "build-dev": "./node_modules/.bin/webpack --mode development --config webpack.dev.js",
-    "lint": "npm run lint-es && npm run lint-styles && npm run lint-ts && npm run lint-md",
+    "lint": "npm run lint-es && npm run lint-styles && npm run lint-ts",
     "lint-ts": "./node_modules/.bin/tsc --skipLibCheck --incremental --noEmit",
     "lint-es": "./node_modules/.bin/eslint --fix --cache ./**/*.{js,jsx,ts,tsx,json} && prettier --write **/*.{js,jsx,ts,tsx,json,html} --loglevel warn",
-    "lint-styles": "./node_modules/.bin/stylelint --fix --cache ./**/*.{css,scss,less} && prettier --write **/*.{css,scss,less} --loglevel warn",
-    "lint-md": "./node_modules/.bin/markdownlint --fix **/*.md --ignore node_modules",
+    "lint-styles": "prettier --write **/*.{css,scss,less} --loglevel warn",
     "prepare": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks && git config --unset core.hooksPath",
-    "postinstall": "npm audit fix"
+    "postinstall": "npm audit fix && husky install"
   },
   "repository": {
     "type": "git",
@@ -69,10 +68,8 @@
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.1",
+    "husky": "^7.0.0",
     "lint-staged": "^11.1.1",
-    "markdownlint": "^0.23.1",
-    "markdownlint-cli": "^0.27.1",
     "mini-css-class-name": "^0.12.2",
     "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
@@ -89,12 +86,6 @@
     "script-ext-html-webpack-plugin": "^2.1.5",
     "shx": "^0.3.3",
     "style-loader": "^3.2.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-no-unsupported-browser-features": "^5.0.1",
-    "stylelint-prettier": "^1.2.0",
-    "stylelint-scss": "^3.20.1",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.4",
