--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.tsx",
   "scripts": {
     "test": "exit 0",
-    "start": "npm run serve",
+    "start": "yarn run serve",
     "serve": "./node_modules/.bin/webpack serve --open --config webpack.devServer.js",
     "build-prod": "./node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "build-prod-withMap": "./node_modules/.bin/webpack --mode production --config webpack.prod.js --sourceMap",
@@ -99,7 +99,11 @@
     "webpack-mock-server": "^1.0.13"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@types/history": "^4.7.9",
+    "@types/react-router-dom": "^5.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   }
 }
