--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/express": "^4.17.13",
+    "@types/history": "^4.7.9",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -100,8 +101,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
-    "@types/history": "^4.7.9",
     "@types/react-router-dom": "^5.3.0",
+    "html-loader": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
