--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/history": "^4.7.9",
+    "@types/node": "^16.11.1",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -75,6 +77,7 @@
     "node-sass": "^6.0.1",
     "obsolete-webpack-plugin": "^0.5.6",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "path": "^0.12.7",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-normalize": "^10.0.0",
@@ -100,10 +103,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.23.0",
+    "cors": "^2.8.5",
     "html-loader": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "use-debounce": "^7.0.0"
   }
 }
