--- a/package.json
+++ b/package.json
@@ -107,9 +107,11 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.23.0",
+    "final-form": "^4.20.4",
     "html-loader": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.7",
     "react-router-dom": "^5.3.0",
     "use-debounce": "^7.0.0"
   }
