--- a/package.json
+++ b/package.json
@@ -105,14 +105,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.23.0",
     "final-form": "^4.20.4",
     "html-loader": "^2.1.2",
     "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
+    "react-context": "^0.0.3",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "use-debounce": "^7.0.0"
   }
