--- a/package.json
+++ b/package.json
@@ -109,10 +109,12 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.23.0",
+    "body-parser": "^1.19.0",
     "final-form": "^4.20.4",
     "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-final-form": "^6.5.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
