--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Must-have config for Webpack 5",
   "main": "main.tsx",
   "scripts": {
-    "test": "exit 0",
+    "test": "jest",
     "start": "yarn run serve",
     "serve": "./node_modules/.bin/webpack serve --open --config webpack.devServer.js",
     "build-prod": "./node_modules/.bin/webpack --mode production --config webpack.prod.js",
@@ -14,7 +14,7 @@
     "lint-ts": "./node_modules/.bin/tsc --skipLibCheck --incremental --noEmit",
     "lint-es": "./node_modules/.bin/eslint --fix --cache ./**/*.{js,jsx,ts,tsx,json} && prettier --write **/*.{js,jsx,ts,tsx,json,html} --loglevel warn",
     "lint-styles": "prettier --write **/*.{css,scss,less} --loglevel warn",
-    "prepare": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks && git config --unset core.hooksPath"
+    "prepare": "jest && husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks && git config --unset core.hooksPath"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/history": "^4.7.9",
+    "@types/jquery": "^3.5.10",
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
@@ -73,6 +74,7 @@
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
+    "jest": "^27.4.7",
     "lint-staged": "^11.1.1",
     "mini-css-class-name": "^0.12.2",
     "mini-css-extract-plugin": "^2.1.0",
@@ -104,8 +106,12 @@
     "webpack-mock-server": "^1.0.13"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.2.5",
+    "@mui/x-data-grid": "^5.2.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.23.0",
@@ -117,6 +123,7 @@
     "react-final-form": "^6.5.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-test-renderer": "^17.0.2",
     "use-debounce": "^7.0.0"
   }
 }
